Applied PMD suggestions; Added missing methods to DBusConnectionBuilder